assets/preset1_hart.css
/* ... */
.banner h2{
    /* color: white;*/
    padding-top: 10px;
    margin-left: 2%;
    display: inline-block;
}

.banner Img{
    position: relative;
    float: right;
    right: 10px;
    height: 80px;
    padding-bottom: 40px;
}

/* Sidebar
–––––––––––––––––––––––––––––––––––––––––––––––––– */


.sidebar {
  display: block;
  width: 16.5%; 
  display: inline-block;
  position: relative;
  background-color: #fffced !important;
}

.menuBox {
  font-family: 'proxima_nova_rgregular';
  font-size: 15px;
  color: #0B4952;
  padding-bottom: 15pt;
  padding-left: 0.5%;
  position: fixed;
  top: 20px;
}

.menuItems {
  padding-bottom: 20pt;
}

.menuTexts {
  color: #0B4952;
}

/* Dashboard
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* <div class="dashboardWrapper" style="position: relative;">
<embed style="border: none;" src="https://hartdashboard-kook-lgeo.koyeb.app/page2" dpi="300" width="100%" height="3200vh">
</div> */


.background-lgeo {
  width: 90%;
  display: inline-block;
  padding-left: 2%;
  padding-right: 2%;
  padding-bottom: 2%;
  overflow: hidden;
}

/* @media (max-width: 900px) {
  .background-pg2-lgeo  {
    width: 90%;
    height: 1100px;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
    overflow: hidden;
  }
}


@media (min-width: 900px) {
  .background-pg2-lgeo  {
    width: 90%;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
  }
} */



.background-pg2-lgeo {
  width: 100%;
  display: inline-block;
  padding-left: 2%;
  padding-right: 2%;
  /* overflow: hidden; */
}

.background-pg3-lgeo {
  width: 100%;
  display: inline-block;
  padding-left: 2%;
  padding-right: 2%;
  /* overflow: hidden; */
}

/* @media (max-width: 1000px) {
  .background-pg3-lgeo  {
    width: 90%;
    height: 1800px;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
    overflow: hidden;
  }
}


@media (min-width: 1000px) {
  .background-pg3-lgeo  {
    width: 90%;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
  }
} */



.dashboard-pg1-lgeo {
  width: 90%;
  display: inline-block;
  padding-left: 2%;
  padding-right: 2%;
  padding-bottom: 2%;

  /*border-left-style: solid;
  border-left-color: #4A8F97;
  border-left-width: 1pt; */
  /* background-color: #F3F4F5; */

}

.dashboard-lgeo {
  width: 100%;
  display: inline-block;
  padding-left: 2%;
  padding-right: 2%;

  /*border-left-style: solid;
  border-left-color: #4A8F97;
  border-left-width: 1pt; */
  /* background-color: #F3F4F5; */
}



@media (max-width: 1000px) {
  .dashboard-lgeo  {
    width: 1000px;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
    /* transform:scale(0.28); */
    /* transform-origin: left top; */
    /* margin-bottom:-2000px;
    margin-right:-100px; */
  }
}


@media (min-width: 1000px) {
  .dashboard-lgeo  {
    width: 1100px;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
  }
}


.dropdown-box-lgeo {
  /* width: 70%; */
  display: inline;
  /* padding-right: 30px;
  padding-bottom: 10px;
  padding-top: 20px;
  */
}

.dropdown-lgeo {
  width: 400px;
  display: inline-block;
  padding-right: 30px;
  padding-bottom: 10px;
  padding-top: 20px;
}

/* .scale-buttons-lgeo {
  width: 100%;
  display: inline;
  padding-bottom: 5px;
  padding-top: 5px;

} */

.scale-button-box-lgeo {
  /* width: 100%; */
  display: block;
  padding-bottom: 5px;
  padding-top: 5px;
  float: left;

}

.region-button-box-lgeo {
  /* width: 280px; */
  display: inline-block;
  padding-right: 10px;
  padding-top: 1%;
}

.region-button-lgeo {
  width: 270px;
  /* display: inline-block;
  padding-right: 10px;
  padding-top: 1%; */
}


.reset-button-lgeo {
  /* width: 100%; */
  display: block;
  /* padding-bottom: 20px; */
  padding-top: 10px;

}




.map-lgeo {
  /* width: 100%;  */
  display: inline;
}

.map-area-box-lgeo {
  display: inline-block;

}

@media (max-width: 500px) {
  .map-area-box-lgeo  {
    width: 300px;
    height: 100px;
    display: inline-block;
  }

  .dropdown-lgeo {
    width: 330px;
    display: inline-block;
    padding-right: 30px;
    padding-bottom: 10px;
    padding-top: 20px;
  }
}


@media (min-width: 500px) {
  .map-area-box-lgeo  {
    width: 1000px;
    height: 500px;
    display: inline-block;
  }

  .dropdown-lgeo {
    width: 400px;
    display: inline-block;
    padding-right: 30px;
    padding-bottom: 10px;
    padding-top: 20px;
  }
}

.pg2-table-lgeo {
  /* width: 80%; */
  padding-top: 30px;
  padding-bottom: 30px;
}


/* .pg2-plot-lgeo {
  width: 80%;
  display: inline-block;
} */


.pg2-plot-lgeo {
  width: 95%;
  display: block;
  padding-top: 1%;
}

.pg2-table-plot-box-lgeo {
  /* width: 90%; */
  display: block;
  /* padding-top: 1%; */
}

.pg3-plot-lgeo {
  /* width: 90%; */
  display: block;
  padding-top: 1%;
}

.pg3-table-lgeo {
  /* width: 90%; */
  padding-bottom: 1.5%;
}

.pg3-table-plot-box-lgeo {
  /* width: 90%; */
  display: block;
  /* padding-top: 1%; */
}

/* .pg3-table-plot-box-lgeo {
  width: 100%;
  display: inline-block;
  padding-bottom: 1%;
} */

.muni-reg-text-lgeo{
  width: 90%;
  padding-bottom: 1%;
}

.export{
  margin-bottom: 5%;
}



.tables {
  padding-bottom: 1%;
  padding-top: 1%;
}

span.column-header--sort {
  display: none;
}

/* 
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* For devices larger than 400px */
@media (min-width: 400px) {
  .container {
    width: 85%;
    padding: 0; }
}
/* ... */

